# HILLEL_CPP.PRO_HW.5-7

./: .gitignore  CMakeLists.txt  HW.7 Logger_HW.5_Advanced.cpp  Logger.cpp  Logger.h
